--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,22 +32,52 @@ ul {
 h5 {
   color: grey;
 }
+a {
+  text-decoration: none;
+}
+html {
+  scroll-behavior: smooth;
+}
 
 /** landpage CSS */
 .landpage-container {
   max-width: 100%;
   width: 100vw;
-  height: 100vh;
+  height: 95vh;
+  position: relative;
+}
+.background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #eff5f9;
+}
+.background-style {
+  width: 30%;
+  height: 100%;
+  background-color: #b9e0fb;
+  margin-left: auto;
+}
+.basket-img {
+  position: absolute;
+  width: 40%;
+  height: 70%;
+  right: 13%;
+  top: 20%;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-
-  background-image: url(https://images.velog.io/images/seonja/post/f8159754-11b9-42cc-8c89-be8401a33ed7/background-min.png);
+  background-image: url('./basket.png');
 }
 .nav-container {
+  position: absolute;
+  width: 100%;
   height: 64px;
   background-color: rgba(245, 245, 245, 0.4);
   display: flex;
   justify-content: flex-end;
   padding-right: 48px;
+  z-index: 1;
 }
 .nav-item {
   font-size: 20px;
@@ -57,12 +87,17 @@ h5 {
   color: #0074e8;
   cursor: pointer;
 }
+.quote-container {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 15px 15%;
+}
 .main-quote {
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin: 15%;
+  line-height: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 .register-container {
@@ -70,15 +105,53 @@ h5 {
   min-width: 300px;
   margin: auto;
 }
+#about {
+  height: 100vh;
+}
+.about-header {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15%;
+  font-size: 24px;
+  letter-spacing: 0.4rem;
+}
+.about-content {
+  height: 80%;
+  background-size: cover;
+  background-position: center;
+  background-image: url('./aboutBack-min.png');
+  padding: 4% 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-content #letter {
+  line-height: 2.5rem;
+  color: #808080;
+}
+.warning {
+  border: 1px dotted #909090;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2%;
+  padding: 0 2% 2%;
+  line-height: 2.5rem;
+}
 
-@media (max-width: 960px) {
-  .landpage-container {
-    background-image: url(https://images.velog.io/images/seonja/post/27e68467-006d-4c57-af87-30b35e569a29/background-min.png);
+@media (max-width: 1100px) {
+  .quote-container {
+    background-color: rgba(250, 250, 250, 0.3);
   }
 }
 
-@media (max-width: 500px) {
-  .landpage-container {
-    background-image: url(https://images.velog.io/images/seonja/post/8644551d-c825-412b-81ce-1332e0915f9e/background_small-min.png);
+@media (max-width: 960px) {
+  .basket-img {
+    top: 40%;
+    height: 40%;
   }
 }
