--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,6 +145,18 @@ html {
   padding: 0 2% 2%;
   line-height: 2.5rem;
 }
+.card-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+.card-container {
+  width: calc(25% - 44px);
+  margin: 0 22px 56px;
+}
+.card-photo {
+  border-radius: 12px;
+  width: 100%;
+}
 
 @media (max-width: 1100px) {
   .quote-container {
